--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .card {
     text-align: center;
-    background-image: url('papel-carta.png');
+    background-image: url('https://drive.google.com/drive/folders/1VjoYzuEU2UVsYZycjD0BSGrBfVnrlc3i');
     background-size: cover;
     padding: 20px;
     border-radius: 8px;
